Added new api for deal service
